@@ -1,4 +1,5 @@
 current:
+  * add readertest fixed zoom stops
   * add manual frame capture
     - readertest save as PNG
   * enhance readertest to support default/demo pre-config and distribution
